--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -22,22 +22,30 @@
     "verify": "hardhat etherscan-verify"
   },
   "dependencies": {
+    "@account-abstraction/contracts": "0.8.0",
     "@inquirer/password": "^4.0.2",
-    "@openzeppelin/contracts": "~5.0.2",
+    "@openzeppelin/contracts": "^5.1.1",
     "@typechain/ethers-v6": "~0.5.1",
+    "@types/node": "^24.0.10",
     "dotenv": "~16.4.5",
     "envfile": "~7.1.0",
+    "next-themes": "^0.4.6",
     "qrcode": "~1.5.4"
   },
   "devDependencies": {
+    "@account-abstraction-sdk": "github:eth-infinitism/account-abstraction#releases/v0.8",
     "@ethersproject/abi": "~5.7.0",
     "@ethersproject/providers": "~5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "~2.0.7",
     "@nomicfoundation/hardhat-ethers": "~3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "~1.0.11",
+    "@nomicfoundation/hardhat-toolbox": "^6.0.0",
     "@nomicfoundation/hardhat-verify": "~2.0.10",
-    "@typechain/ethers-v5": "~11.1.2",
-    "@typechain/hardhat": "~9.1.0",
+    "@nomicfoundation/ignition-core": "^0.15.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.3.0",
     "@types/eslint": "~9.6.1",
     "@types/mocha": "~10.0.10",
     "@types/prettier": "~3.0.0",
@@ -48,16 +56,16 @@
     "eslint": "~9.23.0",
     "eslint-config-prettier": "~10.1.1",
     "eslint-plugin-prettier": "~5.2.4",
-    "ethers": "~6.13.2",
-    "hardhat": "~2.22.10",
+    "ethers": "^6.14.0",
+    "hardhat": "^2.22.0",
     "hardhat-deploy": "~0.12.4",
     "hardhat-deploy-ethers": "~0.4.2",
-    "hardhat-gas-reporter": "~2.2.1",
+    "hardhat-gas-reporter": "^2.2.5",
     "prettier": "^3.5.3",
     "prettier-plugin-solidity": "~1.4.1",
     "solidity-coverage": "~0.8.13",
     "ts-node": "~10.9.1",
     "typechain": "~8.3.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   }
 }
