--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -56,5 +56,15 @@
     "typescript": "~5.8.2",
     "vercel": "~39.1.3"
   },
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "resolutions": {
+    "next-themes/react": "^19.0.0"
+  },
+  "packageExtensions": {
+    "next-themes@*": {
+      "peerDependencies": {
+        "react": ">=16.8.0"
+      }
+    }
+  }
 }
