--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,6 @@ deployments/
 *.seed
 
 # Ignore manually cloned AA lib and symlinks
-/aa-lib/
-/packages/hardhat/contracts/@account-abstraction/
+aa-lib/
+packages/aa-lib/
+packages/hardhat/contracts/@account-abstraction/
