feat: switch to WalletFuel Paymaster, add local AA vendor with init scripts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		]
 	},
 	"scripts": {
+		"aa:init": "./scripts/aa-init.sh",
+		"aa:clean": "./scripts/aa-clean.sh",
 		"account": "yarn hardhat:account",
 		"account:generate": "yarn workspace @se-2/hardhat account:generate",
 		"account:import": "yarn workspace @se-2/hardhat account:import",
