--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -22,7 +22,6 @@
     "verify": "hardhat etherscan-verify"
   },
   "dependencies": {
-    "@account-abstraction/contracts": "0.8.0",
     "@inquirer/password": "^4.0.2",
     "@openzeppelin/contracts": "^5.1.1",
     "@typechain/ethers-v6": "~0.5.1",
@@ -33,7 +32,8 @@
     "qrcode": "~1.5.4"
   },
   "devDependencies": {
-    "@account-abstraction-sdk": "github:eth-infinitism/account-abstraction#releases/v0.8",
+    "@account-abstraction/contracts": "^0.8.0",
+    "@account-abstraction/sdk": "^0.6.0",
     "@ethersproject/abi": "~5.7.0",
     "@ethersproject/providers": "~5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "~2.0.7",
