chore(ci): add minimal GitHub Actions workflow for scaffold-eth-2 contract test pipeline

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"scripts": {
 		"aa:init": "./scripts/aa-init.sh",
 		"aa:clean": "./scripts/aa-clean.sh",
+		"ci": "yarn aa:init && cd packages/hardhat && yarn compile && yarn test",
 		"account": "yarn hardhat:account",
 		"account:generate": "yarn workspace @se-2/hardhat account:generate",
 		"account:import": "yarn workspace @se-2/hardhat account:import",
