--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -26,6 +26,7 @@
     "@openzeppelin/contracts": "^5.1.1",
     "@typechain/ethers-v6": "~0.5.1",
     "@types/node": "^24.0.10",
+    "@uniswap/v3-periphery": "^1.4.4",
     "dotenv": "~16.4.5",
     "envfile": "~7.1.0",
     "next-themes": "^0.4.6",
@@ -33,7 +34,6 @@
   },
   "devDependencies": {
     "@account-abstraction/contracts": "^0.8.0",
-    "@account-abstraction/sdk": "^0.6.0",
     "@ethersproject/abi": "~5.7.0",
     "@ethersproject/providers": "~5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "~2.0.7",
