--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -45,6 +45,8 @@
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
     "@nomicfoundation/hardhat-verify": "~2.0.10",
     "@nomicfoundation/ignition-core": "^0.15.0",
+    "@openzeppelin/contracts-upgradeable": "^5.3.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.3.0",
     "@types/eslint": "~9.6.1",
