chore: update project configuration and dependencies
Apply various updates to project-level and package-level configurations.

This commit includes:
- Modifications to the CI workflow.
- Updates to `package.json` and `yarn.lock` files, reflecting dependency changes.
- Adjustments to the Hardhat projects `package.json` and `tsconfig.json`.
- Changes to the example environment file and the deployment script runner.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Initialize vendor libs
         run: yarn aa:init
 
+      - name: Load fallback .env
+        run: cp packages/hardhat/.env.example packages/hardhat/.env
+
       - name: Compile contracts
         run: |
           cd packages/hardhat
