--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "se-2",
 	"version": "0.0.1",
-	"private": true,
+	"resolutions": {
+		"viem": "2.28.1"
+	},
 	"workspaces": {
 		"packages": [
 			"packages/*",
