--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -1,13 +1,28 @@
 # Template for Hardhat environment variables.
-
 # To use this template, copy this file, rename it .env, and fill in the values.
-
 # If not set, we provide default values (check `hardhat.config.ts`) so developers can start prototyping out of the box,
 # but we recommend getting your own API Keys for Production Apps.
+# To access the values stored in this .env file you can use: process.env.VARIABLENAME                                                                     │
+ALCHEMY_API_KEY=                                                                                                                                          │
+ETHERSCAN_MAINNET_API_KEY=                                                                                                                                │
+RPC_URL=                                                                                                                                                  │
 
-# To access the values stored in this .env file you can use: process.env.VARIABLENAME
-ALCHEMY_API_KEY=
-ETHERSCAN_MAINNET_API_KEY=
+# Don't fill this value manually, run yarn generate to generate a new account or yarn account:import to import an existing PK.                            │
+DEPLOYER_PRIVATE_KEY_ENCRYPTED=                                                                                                                           │
+PRIVATE_KEY=                                                                                                                                              │
+ENTRYPOINT_ADDRESS=                                                                                                                                       │
 
-# Don't fill this value manually, run yarn generate to generate a new account or yarn account:import to import an existing PK.
-DEPLOYER_PRIVATE_KEY_ENCRYPTED=
+# Habilitate redeploy of contracts                                                                                                                        │
+REDEPLOY_WALLETFUELCONFIG=false                                                                                                                           │
+REDEPLOY_WALLETFUEL=false                                                                                                                                 │
+REDEPLOY_MULTI_ORACLE=false                                                                                                                               │
+REDEPLOY_MULTI_AGGREGATOR=false                                                                                                                           │
+REDEPLOY_AGGREGATOR_FACTORY=false                                                                                                                         │
+REDEPLOY_DIA_FACTORY=false                                                                                                                                │
+REDEPLOY_DIA_ADAPTER=false                                                                                                                                │
+
+# API Keys                                                                                                                                                │
+COINMARKETCAP_API_KEY=tu_api_key_aqui                                                                                                                     │
+DIA_ORACLE_ADDRESS=                                                                                                                                       │  
+PIMLICO_API_KEY=""
+DEPLOYER_PASSWORD=""
