--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -6,6 +6,7 @@
     "account:generate": "hardhat run scripts/generateAccount.ts",
     "account:import": "hardhat run scripts/importAccount.ts",
     "account:reveal-pk": "hardhat run scripts/revealPK.ts",
+    "account:reveal-address": "hardhat run scripts/revealAddress.ts",
     "chain": "hardhat node --network hardhat --no-deploy",
     "check-types": "tsc --noEmit --incremental",
     "clean": "hardhat clean",
@@ -19,19 +20,27 @@
     "lint": "eslint",
     "lint-staged": "eslint",
     "test": "REPORT_GAS=true hardhat test --network hardhat",
+    "test:coverage": "hardhat coverage",
+    "test:gas": "HARDHAT_GAS_REPORT=true hardhat test",
+    "test:standalone": "ts-node scripts/sponsorship_standalone.ts",
     "verify": "hardhat etherscan-verify"
   },
+  "private": true,
   "dependencies": {
-    "@inquirer/password": "^4.0.2",
-    "@openzeppelin/contracts": "^5.1.1",
-    "@typechain/ethers-v6": "~0.5.1",
-    "@types/node": "^24.0.10",
-    "@uniswap/v3-periphery": "^1.4.4",
-    "dotenv": "~16.4.5",
-    "envfile": "~7.1.0",
+    "@alchemy/aa-accounts": "latest",
+    "@alchemy/aa-core": "latest",
+    "@alchemy/aa-ethers": "latest",
+    "@inquirer/password": "latest",
+    "@openzeppelin/contracts": "latest",
+    "@typechain/ethers-v6": "latest",
+    "@types/node": "latest",
+    "@uniswap/v3-periphery": "latest",
+    "dotenv": "latest",
+    "envfile": "latest",
     "euler-price-oracle": "https://github.com/euler-xyz/euler-price-oracle.git",
-    "next-themes": "^0.4.6",
-    "qrcode": "~1.5.4"
+    "next-themes": "latest",
+    "qrcode": "latest",
+    "viem": "2.28.1"
   },
   "devDependencies": {
     "@account-abstraction/contracts": "^0.8.0",
@@ -63,10 +72,10 @@
     "hardhat": "^2.22.0",
     "hardhat-deploy": "~0.12.4",
     "hardhat-deploy-ethers": "~0.4.2",
-    "hardhat-gas-reporter": "^2.2.5",
+    "hardhat-gas-reporter": "^2.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-solidity": "~1.4.1",
-    "solidity-coverage": "~0.8.13",
+    "solidity-coverage": "^0.8.16",
     "ts-node": "~10.9.1",
     "typechain": "~8.3.2",
     "typescript": "^5.8.3"
