docs: clarify WalletFuel upgradeability
Correct the documentation in  regarding the upgradeability of the  Paymaster.

Previously, it incorrectly stated that Paymasters are generally immutable. While the contract may contain storage gap patterns, it is not actively upgradeable via a proxy.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ deployments/
 aa-lib/
 packages/aa-lib/
 packages/hardhat/contracts/@account-abstraction/
+
+# OpenZeppelin state files
+packages/hardhat/.openzeppelin/
