feat(scripts): Rename sendUserOp.ts to sendUserOp.alchemy.ts for bundler naming convention

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"workspaces": {
 		"packages": [
 			"packages/*",
-			"!packages/aa-lib"
+			"!packages/aa-lib",
+			"packages/paymaster-client"
 		]
 	},
 	"scripts": {
