--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -19,11 +19,15 @@
     "hardhat-verify": "hardhat verify",
     "lint": "eslint",
     "lint-staged": "eslint",
-    "test": "REPORT_GAS=true hardhat test --network hardhat",
+    "test": "REPORT_GAS=true hardhat test",
     "test:coverage": "hardhat coverage",
     "test:gas": "HARDHAT_GAS_REPORT=true hardhat test",
-    "test:standalone": "ts-node scripts/sponsorship_standalone.ts",
-    "verify": "hardhat etherscan-verify"
+    "test:file": "REPORT_GAS=true hardhat test --network scrollSepolia",
+    "test:smart-account-creation": "REPORT_GAS=true hardhat test --network scrollSepolia test/SmartAccount.test.ts",
+    "test:sponsorship-verifications": "REPORT_GAS=true hardhat test --network scrollSepolia test/SponsorshipVerifications.test.ts",
+    "check:preflight": "ts-node scripts/pre_flight_check.ts",
+    "verify": "hardhat etherscan-verify",
+    "fund-paymaster": "hardhat run scripts/fundPaymaster.ts --network scrollSepolia"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +43,7 @@
     "envfile": "latest",
     "euler-price-oracle": "https://github.com/euler-xyz/euler-price-oracle.git",
     "next-themes": "latest",
+    "permissionless": "latest",
     "qrcode": "latest",
     "viem": "2.28.1"
   },
