chore: Update Hardhat config and deployment artifacts

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -8,13 +8,13 @@ ETHERSCAN_MAINNET_API_KEY=                                                      
 RPC_URL=                                                                                                                                                  │
 
 # Don't fill this value manually, run yarn generate to generate a new account or yarn account:import to import an existing PK.                            │
-DEPLOYER_PRIVATE_KEY_ENCRYPTED=                                                                                                                           │
+DEPLOYER_PRIVATE_KEY=                                                                                                                           │
 PRIVATE_KEY=                                                                                                                                              │
 ENTRYPOINT_ADDRESS=                                                                                                                                       │
 
 # Habilitate redeploy of contracts                                                                                                                        │
-REDEPLOY_WALLETFUELCONFIG=false                                                                                                                           │
-REDEPLOY_WALLETFUEL=false                                                                                                                                 │
+REDEPLOY_GASXCONFIG=false                                                                                                                           │
+REDEPLOY_GASX=false                                                                                                                                 │
 REDEPLOY_MULTI_ORACLE=false                                                                                                                               │
 REDEPLOY_MULTI_AGGREGATOR=false                                                                                                                           │
 REDEPLOY_AGGREGATOR_FACTORY=false                                                                                                                         │
