--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,6 +16,9 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
+    "@alchemy/aa-accounts": "latest",
+    "@alchemy/aa-core": "latest",
+    "@alchemy/aa-ethers": "latest",
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.2.7",
     "@tanstack/react-query": "~5.59.15",
@@ -28,6 +31,7 @@
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
+    "permissionless": "latest",
     "qrcode.react": "~4.0.1",
     "react": "~19.0.0",
     "react-dom": "~19.0.0",
@@ -58,7 +62,12 @@
   },
   "packageManager": "yarn@3.2.3",
   "resolutions": {
-    "next-themes/react": "^19.0.0"
+    "next-themes/react": "^19.0.0",
+    "@ethersproject/abi": "5.7.2",
+    "@ethersproject/contracts": "5.7.2",
+    "@ethersproject/providers": "5.7.2",
+    "@ethersproject/solidity": "5.7.2",
+    "@ethersproject/strings": "5.7.2"
   },
   "packageExtensions": {
     "next-themes@*": {
