--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -11,4 +11,7 @@
 # More info: https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
+NEXT_PUBLIC_PIMLICO_API_KEY="your_pimlico_api_key_here"
+# URL Pimlico for Scroll Sepolia
+EXT_PUBLIC_PIMLICO_API_URL="https://api.pimlico.io/v2/534351/rpc"
 
