chore: Update project configuration and dependencies

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -1,28 +1,47 @@
-# Template for Hardhat environment variables.
-# To use this template, copy this file, rename it .env, and fill in the values.
-# If not set, we provide default values (check `hardhat.config.ts`) so developers can start prototyping out of the box,
-# but we recommend getting your own API Keys for Production Apps.
-# To access the values stored in this .env file you can use: process.env.VARIABLENAME                                                                     │
-ALCHEMY_API_KEY=                                                                                                                                          │
-ETHERSCAN_MAINNET_API_KEY=                                                                                                                                │
-RPC_URL=                                                                                                                                                  │
+# Hardhat environment variables template.
+# To use, copy this file to a new file named ".env" and fill in the values.
+# IMPORTANT: The .env file should be included in your .gitignore file to protect sensitive data.
 
-# Don't fill this value manually, run yarn generate to generate a new account or yarn account:import to import an existing PK.                            │
-DEPLOYER_PRIVATE_KEY=                                                                                                                           │
-PRIVATE_KEY=                                                                                                                                              │
-ENTRYPOINT_ADDRESS=                                                                                                                                       │
+# -- Provider & Etherscan API Keys --
+ALCHEMY_API_KEY=
+ETHERSCAN_MAINNET_API_KEY=
 
-# Habilitate redeploy of contracts                                                                                                                        │
-REDEPLOY_GASXCONFIG=false                                                                                                                           │
-REDEPLOY_GASX=false                                                                                                                                 │
-REDEPLOY_MULTI_ORACLE=false                                                                                                                               │
-REDEPLOY_MULTI_AGGREGATOR=false                                                                                                                           │
-REDEPLOY_AGGREGATOR_FACTORY=false                                                                                                                         │
-REDEPLOY_DIA_FACTORY=false                                                                                                                                │
-REDEPLOY_DIA_ADAPTER=false                                                                                                                                │
+# Optional: You can set a specific RPC_URL to override the one in hardhat.config.ts
+# RPC_URL=
 
-# API Keys                                                                                                                                                │
-COINMARKETCAP_API_KEY=tu_api_key_aqui                                                                                                                     │
-DIA_ORACLE_ADDRESS=                                                                                                                                       │  
-PIMLICO_API_KEY=""
+# -- Accounts --
+# This must be the RAW private key (starting with 0x) of the account you want to use for deployments.
+DEPLOYER_PRIVATE_KEY=
+DEPLOYER_PRIVATE_KEY_ENCRYPTED=
 DEPLOYER_PASSWORD=""
+
+# -- ERC-4337 --
+ENTRYPOINT_ADDRESS="0x4337084d9e255ff0702461cf8895ce9e3b5ff108"
+
+# -- Redeploy Flags --
+# Set to 'true' to force a contract to be redeployed. Defaults to false for safety.
+REDEPLOY_GASXCONFIG=false
+REDEPLOY_GASX=false
+REDEPLOY_MULTI_ORACLE=false
+REDEPLOY_MULTI_AGGREGATOR=false
+REDEPLOY_AGGREGATOR_FACTORY=false
+REDEPLOY_DIA_FACTORY=false
+REDEPLOY_DIA_ADAPTER=false
+
+# Set to 'true' to automatically stake and deposit funds into the Paymaster upon deployment.
+FUND_ON_DEPLOY=false
+
+# -- Paymaster Deploy Script Variables --
+# These are required by the deployment scripts for public networks.
+ORACLE_SIGNER_MAINNET=
+ORACLE_SIGNER_BASE_SEPOLIA=
+ORACLE_SIGNER_ARB_SEPOLIA=
+
+PAYMASTER_TREASURY_MAINNET=
+PAYMASTER_TREASURY_BASE_SEPOLIA=
+PAYMASTER_TREASURY_ARBITRUM_SEPOLIA=
+
+# -- Other API Keys & Addresses --
+COINMARKETCAP_API_KEY=
+PIMLICO_API_KEY=
+DIA_ORACLE_ADDRESS=
