--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -23,6 +23,7 @@
     "test:coverage": "hardhat coverage",
     "test:gas": "HARDHAT_GAS_REPORT=true hardhat test",
     "test:file": "REPORT_GAS=true hardhat test --network scrollSepolia",
+    "testlocal:file": "REPORT_GAS=true hardhat test --network hardhat",
     "test:smart-account-creation": "REPORT_GAS=true hardhat test --network scrollSepolia test/SmartAccount.test.ts",
     "test:sponsorship-verifications": "REPORT_GAS=true hardhat test --network scrollSepolia test/SponsorshipVerifications.test.ts",
     "check:preflight": "ts-node scripts/pre_flight_check.ts",
@@ -35,7 +36,7 @@
     "@alchemy/aa-core": "latest",
     "@alchemy/aa-ethers": "latest",
     "@inquirer/password": "latest",
-    "@openzeppelin/contracts": "latest",
+    "@openzeppelin/contracts-upgradeable": "^5.3.0",
     "@typechain/ethers-v6": "latest",
     "@types/node": "latest",
     "@uniswap/v3-periphery": "latest",
@@ -57,9 +58,8 @@
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "~1.0.11",
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
-    "@nomicfoundation/hardhat-verify": "~2.0.10",
+    "@nomicfoundation/hardhat-verify": "~2.1.0",
     "@nomicfoundation/ignition-core": "^0.15.0",
-    "@openzeppelin/contracts-upgradeable": "^5.3.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.3.0",
