--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -28,7 +28,7 @@
     "burner-connector": "0.0.16",
     "daisyui": "5.0.9",
     "kubo-rpc-client": "~5.0.2",
-    "next": "~15.2.3",
+    "next": "^15.4.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
     "permissionless": "latest",
