--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -1,34 +1,47 @@
 {
   "name": "@se-2/hardhat",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
+    "// 1. CORE DEVELOPMENT ------------------": "",
+    "chain": "hardhat node --network hardhat --no-deploy",
+    "fork": "MAINNET_FORKING_ENABLED=true hardhat node --network hardhat --no-deploy",
+    "compile": "hardhat compile",
+    "clean": "hardhat clean",
+
+    "// 2. DEPLOYMENT & VERIFICATION ---------": "",
+    "deploy": "hardhat deploy --network ${NETWORK:-hardhat}",
+    "verify": "hardhat etherscan-verify",
+    "hardhat-verify": "hardhat verify",
+    "check:preflight": "ts-node scripts/pre_flight_check.ts",
+
+    "// 3. PROTOCOL OPERATIONS -------------": "",
+    "op:fund-paymaster": "hardhat run scripts/fundPaymaster.ts --network ${NETWORK:-hardhat}",
+    "op:upgrade-aggregator": "hardhat run scripts/operations/upgrade_multiaggregator_v2.ts --network ${NETWORK:-hardhat}",
+    "op:set-usd-limits": "hardhat run scripts/loadAndSetMaxUsd.ts --network ${NETWORK:-hardhat}",
+    
+    "// 4. CODE QUALITY & MAINTENANCE --------": "",
+    "format": "prettier --write './**/*.(ts|sol)'",
+    "lint": "eslint",
+    "lint-staged": "eslint",
+    "check-types": "tsc --noEmit --incremental",
+    "flatten": "hardhat flatten",
+
+    "// 5. TESTING ---------------------------": "",
+    "test": "REPORT_GAS=true hardhat test",
+    "test:coverage": "hardhat coverage",
+    "test:gas": "HARDHAT_GAS_REPORT=true hardhat test",
+    "test:file": "REPORT_GAS=true hardhat test --network ${NETWORK:-hardhat}",
+    "testlocal:file": "REPORT_GAS=true hardhat test --network hardhat",
+    "test:smart-account-creation": "REPORT_GAS=true hardhat test --network ${NETWORK:-hardhat} test/SmartAccount.test.ts",
+    "test:sponsorship-verifications": "REPORT_GAS=true hardhat test --network ${NETWORK:-hardhat} test/SponsorshipVerifications.test.ts",
+    
+    "// 6. ACCOUNT MANAGEMENT --------------": "",
     "account": "hardhat run scripts/listAccount.ts",
     "account:generate": "hardhat run scripts/generateAccount.ts",
     "account:import": "hardhat run scripts/importAccount.ts",
     "account:reveal-pk": "hardhat run scripts/revealPK.ts",
     "account:reveal-address": "hardhat run scripts/revealAddress.ts",
-    "chain": "hardhat node --network hardhat --no-deploy",
-    "check-types": "tsc --noEmit --incremental",
-    "clean": "hardhat clean",
-    "compile": "hardhat compile",
-    "deploy": "ts-node scripts/runHardhatDeployWithPK.ts",
-    "flatten": "hardhat flatten",
-    "fork": "MAINNET_FORKING_ENABLED=true hardhat node --network hardhat --no-deploy",
-    "format": "prettier --write './**/*.(ts|sol)'",
-    "generate": "yarn account:generate",
-    "hardhat-verify": "hardhat verify",
-    "lint": "eslint",
-    "lint-staged": "eslint",
-    "test": "REPORT_GAS=true hardhat test",
-    "test:coverage": "hardhat coverage",
-    "test:gas": "HARDHAT_GAS_REPORT=true hardhat test",
-    "test:file": "REPORT_GAS=true hardhat test --network scrollSepolia",
-    "testlocal:file": "REPORT_GAS=true hardhat test --network hardhat",
-    "test:smart-account-creation": "REPORT_GAS=true hardhat test --network scrollSepolia test/SmartAccount.test.ts",
-    "test:sponsorship-verifications": "REPORT_GAS=true hardhat test --network scrollSepolia test/SponsorshipVerifications.test.ts",
-    "check:preflight": "ts-node scripts/pre_flight_check.ts",
-    "verify": "hardhat etherscan-verify",
-    "fund-paymaster": "hardhat run scripts/fundPaymaster.ts --network scrollSepolia"
+    "generate": "yarn account:generate"
   },
   "private": true,
   "dependencies": {
@@ -42,7 +55,6 @@
     "@uniswap/v3-periphery": "latest",
     "dotenv": "latest",
     "envfile": "latest",
-    "euler-price-oracle": "https://github.com/euler-xyz/euler-price-oracle.git",
     "next-themes": "latest",
     "permissionless": "latest",
     "qrcode": "latest",
