docs: Create deployment guide and update project documentation

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -1,24 +1,36 @@
-# Hardhat environment variables template.
-# To use, copy this file to a new file named ".env" and fill in the values.
-# IMPORTANT: The .env file should be included in your .gitignore file to protect sensitive data.
+# ========================================================================================
+# GasX Protocol Environment Variables Template
+# To use, copy to a new file named ".env" and fill in the required values.
+# IMPORTANT: The .env file must be included in your .gitignore to protect secrets.
+# ========================================================================================
 
-# -- Provider & Etherscan API Keys --
-ALCHEMY_API_KEY=
-ETHERSCAN_MAINNET_API_KEY=
+# =======================================================
+# SECTION 1: CORE CREDENTIALS & API KEYS
+# =======================================================
+# The RAW private key (starting with 0x) of the wallet used for deployments.
+DEPLOYER_PRIVATE_KEY=""
 
-# Optional: You can set a specific RPC_URL to override the one in hardhat.config.ts
-# RPC_URL=
+# API key from your RPC provider (e.g., Alchemy, Infura).
+ALCHEMY_API_KEY=""
+INFURA_API_KEY=""
 
-# -- Accounts --
-# This must be the RAW private key (starting with 0x) of the account you want to use for deployments.
-DEPLOYER_PRIVATE_KEY=
-DEPLOYER_PRIVATE_KEY_ENCRYPTED=
-DEPLOYER_PASSWORD=""
+# Single API key from your Etherscan account (works for Mainnet, Arbiscan, Optimism, etc.).
+ETHERSCAN_API_KEY=""
+
+# Separate API keys for non-Etherscan explorers.
+SCROLLSCAN_API_KEY=""
+LINEASCAN_API_KEY=""
+
+# API key for the Pimlico bundler service.
+PIMLICO_API_KEY=""
+
 
 # -- ERC-4337 --
-ENTRYPOINT_ADDRESS="0x4337084d9e255ff0702461cf8895ce9e3b5ff108"
+ENTRYPOINT_ADDRESS=
 
-# -- Redeploy Flags --
+# =======================================================
+# SECTION 2: DEPLOYMENT FLAGS (Optional)
+# =======================================================
 # Set to 'true' to force a contract to be redeployed. Defaults to false for safety.
 REDEPLOY_GASXCONFIG=false
 REDEPLOY_GASX=false
@@ -45,3 +57,4 @@ PAYMASTER_TREASURY_ARBITRUM_SEPOLIA=
 COINMARKETCAP_API_KEY=
 PIMLICO_API_KEY=
 DIA_ORACLE_ADDRESS=
+SSH_PRIVATE_KEY_EULER_ORACLE=""
