chore(config): Reorganize and clarify .env.example template

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -31,6 +31,9 @@ ENTRYPOINT_ADDRESS=
 # =======================================================
 # SECTION 2: DEPLOYMENT FLAGS (Optional)
 # =======================================================
+# Set to "true" to force a redeployment of ALL contracts.
+REDEPLOY_ALL=false
+
 # Set to 'true' to force a contract to be redeployed. Defaults to false for safety.
 REDEPLOY_GASXCONFIG=false
 REDEPLOY_GASX=false
@@ -40,8 +43,11 @@ REDEPLOY_AGGREGATOR_FACTORY=false
 REDEPLOY_DIA_FACTORY=false
 REDEPLOY_DIA_ADAPTER=false
 
-# Set to 'true' to automatically stake and deposit funds into the Paymaster upon deployment.
+# Set to "true" to automatically fund the paymaster's stake and deposit on deploy.
 FUND_ON_DEPLOY=false
+
+# Set to "true" to deploy mock contracts to a live testnet for E2E testing.
+DEPLOY_MOCKS=false
 
 # -- Paymaster Deploy Script Variables --
 # These are required by the deployment scripts for public networks.
