--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"hardhat:lint-staged": "yarn workspace @se-2/hardhat lint-staged",
 		"hardhat:test": "yarn workspace @se-2/hardhat test",
 		"hardhat:verify": "yarn workspace @se-2/hardhat verify",
+    "hardhat:verify-key": "yarn workspace @se-2/hardhat verify-key",
 		"postinstall": "husky install",
 		"ipfs": "yarn workspace @se-2/nextjs ipfs",
 		"lint": "yarn next:lint && yarn hardhat:lint",
